--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "lucasljj@gmail.com",
   "module": "dist/react-fitty.esm.js",
   "keywords": ["fitty", "react", "react-fitty"],
-  "repository": "https://github.com/morhogg/react-fitty",
+  "repository": "https://github.com/Hutchison-Technologies/react-fitty",
   "version": "1.0.1",
   "license": "MIT",
   "main": "dist/index.js",
